--- a/view/user_function/member_signin.html
+++ b/view/user_function/member_signin.html
@@ -10,6 +10,12 @@
                 }
             }
 
+            function checkLoginState() {
+                FB.getLoginStatus(function(response) {
+                    statusChangeCallback(response);
+                });
+            }
+
             function testAPI() {
                 console.log('Welcome!  Fetching your information.... ');
                 FB.api('/me', function(response) {
@@ -50,7 +56,7 @@
         <div class="sign-wrap">
             <div class="sign text-center">
                 <h2>登入</h2>
-                <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="true" data-use-continue-as="true"></div>
+                <div class="fb-login-button" onlogin="checkLoginState()" data-max-rows="1" data-size="large" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="true" data-use-continue-as="true"></div>
                 <hr class="text-sep-sm">
                 <div class="sign-block">
                     <label for="account">電子信箱</label>
