fix css separate contents

--- a/resource/css/_general.scss
+++ b/resource/css/_general.scss
@@ -1,3 +1,6 @@
+// font for Trisoap signature
+@import url('https://fonts.googleapis.com/css?family=Great+Vibes');
+
 $wrap-lr-margin: 8%;
 $letter-spacing-18-18: 3.24px;
 $text-orange: #ff9c3f;
