--- a/view/manage_ui/m_footer_finish.html
+++ b/view/manage_ui/m_footer_finish.html
@@ -1,3 +1,4 @@
+        <script src="resource/dist/js/jquery-3.2.1.min.js"></script>
         <script src="resource/dist/js/view/manage_ui.js"></script>
     </body>
 </html>
