fix _general includes problem

--- a/resource/css/_general.scss
+++ b/resource/css/_general.scss
@@ -3,6 +3,9 @@
 
 $wrap-lr-margin: 8%;
 $letter-spacing-18-18: 3.24px;
+
+$bg-orange: #F18C41;
+$main-font-color: #555;
 $text-orange: #ff9c3f;
 $text-orange-hover: lighten($text-orange, 10%);
 $translucent-white: rgba(255, 255, 255, 0.7);
