--- a/resource/css/trisoap.scss
+++ b/resource/css/trisoap.scss
@@ -24,8 +24,12 @@ h1, h2, h3, h4, h5, h6, p, span, div, a, label {
  *  10: #preloader
  */
 
-$bg-orange: #F18C41;
-$main-font-color: #555;
+/* -------------------------------------------------------------------------
+ * Shared Properties
+ * -------------------------------------------------------------------------
+ */
+
+@import 'general';
 
 /* =========================================================================
  * Preloader
@@ -291,7 +295,6 @@ $footer-line-height: 1.7;
 
 /* =========================================================================
  * Contents
- * 0. Shared Properties
  * 1. 首頁｜Index Page
  * 2. 三三堅持｜Brand Intro
  * 3. 媒體報導｜Media
@@ -305,13 +308,6 @@ $footer-line-height: 1.7;
  * 11. 客製化專區｜Customize
  * =========================================================================
  */
-
-/* -------------------------------------------------------------------------
- * 0. Shared Properties
- * -------------------------------------------------------------------------
- */
-
-@import 'general';
 
 /* -------------------------------------------------------------------------
  * 1. 首頁｜Index Page
