fix thead td -> th

--- a/view/user_function/order_cus_view.html
+++ b/view/user_function/order_cus_view.html
@@ -5,17 +5,17 @@
                     <table>
                         <thead>
                             <tr>
-                                <td>訂單編號</td>
-                                <td>發票編號</td>
-                                <td>缺貨狀態</td>
-                                <td>訂單狀態</td>
-                                <td>付款狀態</td>
-                                <td>付款方式</td>
-                                <td>訂單總額</td>
-                                <td>運費</td>
-                                <td>實收金額</td>
-                                <td>建立日期</td>
-                                <td>操作</td>
+                                <th>訂單編號</th>
+                                <th>發票編號</th>
+                                <th>缺貨狀態</th>
+                                <th>訂單狀態</th>
+                                <th>付款狀態</th>
+                                <th>付款方式</th>
+                                <th>訂單總額</th>
+                                <th>運費</th>
+                                <th>實收金額</th>
+                                <th>建立日期</th>
+                                <th>操作</th>
                             </tr>
                         </thead>
                         <tbody>
