--- a/view/user_function/cart_content.html
+++ b/view/user_function/cart_content.html
@@ -2,11 +2,11 @@
                         <table>
                             <thead>
                                 <tr>
-                                    <td>商品名稱</td>
-                                    <td>單價(NTD)</td>
-                                    <td>數量</td>
-                                    <td>金額(NTD)</td>
-                                    <td>選項</td>
+                                    <th>商品名稱</th>
+                                    <th>單價(NTD)</th>
+                                    <th>數量</th>
+                                    <th>金額(NTD)</th>
+                                    <th>選項</th>
                                 </tr>
                             </thead>
                             <tbody>
