--- a/view/user_function/member_change_password.html
+++ b/view/user_function/member_change_password.html
@@ -1,25 +1,27 @@
-        <div class="sign-wrap">
-            <div class="sign text-center">
-                <h2>修改密碼</h2>
-                <div class="sign-block">
-                    <label for="ori_password">請輸入舊密碼</label>
-                    <br>
-                    <input type="password" id="ori_password">
-                </div>
-                <div class="sign-block">
-                	<p>密碼限定使用英數字，長度上限為15字元</p>
-                    <label for="new_password1">請輸入新密碼</label>
-                    <br>
-                    <input type="password" id="new_password1">
-                </div>
-                <div class="sign-block">
-                    <label for="new_password2">請再輸入新密碼</label>
-                    <br>
-                    <input type="password" id="new_password2">
-                </div>
-                <div class="sign-block">
-                    <a class="promise-btn" href="javascript:void(0)" onclick="memberChangePassword()">確定</a>
-                    <a class="neural-btn" href="index.php">取消</a>
+        <main>
+            <div class="sign-wrap">
+                <div class="sign text-center">
+                    <h2>修改密碼</h2>
+                    <div class="sign-block">
+                        <label for="ori_password">請輸入舊密碼</label>
+                        <br>
+                        <input type="password" id="ori_password">
+                    </div>
+                    <div class="sign-block">
+                    	<p>密碼限定使用英數字，長度上限為15字元</p>
+                        <label for="new_password1">請輸入新密碼</label>
+                        <br>
+                        <input type="password" id="new_password1">
+                    </div>
+                    <div class="sign-block">
+                        <label for="new_password2">請再輸入新密碼</label>
+                        <br>
+                        <input type="password" id="new_password2">
+                    </div>
+                    <div class="sign-block">
+                        <a class="promise-btn" href="javascript:void(0)" onclick="memberChangePassword()">確定</a>
+                        <a class="neural-btn" href="index.php">取消</a>
+                    </div>
                 </div>
             </div>
-        </div>
+        </main>
