--- a/view/user_function/member_reset_password.html
+++ b/view/user_function/member_reset_password.html
@@ -1,14 +1,16 @@
-        <div class="sign-wrap">
-            <div class="sign text-center">
-                <h2>忘記密碼</h2>
-                <div class="sign-block">
-                    <label for="account">請輸入您的電子信箱</label>
-                    <br>
-                    <input type="email" id="account">
-                </div>
-                <div class="sign-block">
-                    <a class="promise-btn" href="javascript:void(0)" onclick="memberResetPassword()">確定</a>
-                    <a class="neural-btn" href="index.php">取消</a>
+        <main>
+            <div class="sign-wrap">
+                <div class="sign text-center">
+                    <h2>忘記密碼</h2>
+                    <div class="sign-block">
+                        <label for="account">請輸入您的電子信箱</label>
+                        <br>
+                        <input type="email" id="account">
+                    </div>
+                    <div class="sign-block">
+                        <a class="promise-btn" href="javascript:void(0)" onclick="memberResetPassword()">確定</a>
+                        <a class="neural-btn" href="index.php">取消</a>
+                    </div>
                 </div>
             </div>
-        </div>
+        </main>
