--- a/view/user_function/member_verify.html
+++ b/view/user_function/member_verify.html
@@ -1,15 +1,17 @@
-       <div class="sign-wrap">
-            <div class="sign text-center">
-                <h2>驗證註冊</h2>
-                <div class="sign-block">
-                    <p>您的會員註冊驗證碼已以簡訊方式寄出，請前往確認並輸入驗證碼。</p>
-                    <label for="account">驗證碼</label>
-                    <br>
-                    <input type="text" id="verify">
-                </div>
-                <div class="sign-block">
-                    <a class="promise-btn" href="javascript:void(0)" onclick="memberVerify()">確定</a>
-                    <a class="neural-btn" href="index.php">取消</a>
+       <main>
+           <div class="sign-wrap">
+                <div class="sign text-center">
+                    <h2>驗證註冊</h2>
+                    <div class="sign-block">
+                        <p>您的會員註冊驗證碼已以簡訊方式寄出，請前往確認並輸入驗證碼。</p>
+                        <label for="account">驗證碼</label>
+                        <br>
+                        <input type="text" id="verify">
+                    </div>
+                    <div class="sign-block">
+                        <a class="promise-btn" href="javascript:void(0)" onclick="memberVerify()">確定</a>
+                        <a class="neural-btn" href="index.php">取消</a>
+                    </div>
                 </div>
             </div>
-        </div>
+        </main>
