--- a/view/user_function/cart.html
+++ b/view/user_function/cart.html
@@ -1,13 +1,15 @@
-        <div class="sign-wrap">
-            <div class="sign text-center">
-                <h2>您的購物車</h2>
-                [cartContent]
-                <hr class="text-sep-sm">
-                <div class="sign-block">
-                    <p>目前全館滿777即可享臺灣本島免運費！</p>
-                    <a class="promise-btn" href="index.php?route=soap">前往單品</a>
-                    <a class="promise-btn" href="index.php?route=soapstring">旅用皂絲</a>
-                    <a class="neural-btn" href="index.php">返回首頁</a>
+        <main>
+            <div class="sign-wrap">
+                <div class="sign text-center">
+                    <h2>您的購物車</h2>
+                    [cartContent]
+                    <hr class="text-sep-sm">
+                    <div class="sign-block">
+                        <p>目前全館滿777即可享臺灣本島免運費！</p>
+                        <a class="promise-btn" href="index.php?route=soap">前往單品</a>
+                        <a class="promise-btn" href="index.php?route=soapstring">旅用皂絲</a>
+                        <a class="neural-btn" href="index.php">返回首頁</a>
+                    </div>
                 </div>
             </div>
-        </div>
+        </main>
