--- a/view/user_function/discount_apply.html
+++ b/view/user_function/discount_apply.html
@@ -1,14 +1,16 @@
-        <div class="sign-wrap">
-            <div class="sign text-center">
-                <h2>使用折價券</h2>
-                <div class="sign-block">
-                    <label for="index">請輸入兌換碼</label>
-                    <br>
-                    <input type="text" id="index">
-                </div>
-                <div class="sign-block">
-                    <a class="promise-btn" href="javascript:void(0)" onclick="discountApply()">登入</a>
-                    <a class="neural-btn" href="javascript:void(0)" onclick="history.back()">取消</a>
+        <main>
+            <div class="sign-wrap">
+                <div class="sign text-center">
+                    <h2>使用折價券</h2>
+                    <div class="sign-block">
+                        <label for="index">請輸入兌換碼</label>
+                        <br>
+                        <input type="text" id="index">
+                    </div>
+                    <div class="sign-block">
+                        <a class="promise-btn" href="javascript:void(0)" onclick="discountApply()">登入</a>
+                        <a class="neural-btn" href="javascript:void(0)" onclick="history.back()">取消</a>
+                    </div>
                 </div>
             </div>
-        </div>
+        </main>
