--- a/view/user_function/member_edit.html
+++ b/view/user_function/member_edit.html
@@ -1,47 +1,49 @@
-        <div class="sign-wrap">
-            <div class="sign text-center">
-                <h2>會員資料修改</h2>
-                <div class="sign-block">
-                    <p>電子信箱：[member_email]</p>
-                </div>
-                <div class="sign-block">
-                    <label for="name">您的姓名</label>
-                    <br>
-                    <input type="text" id="name" value="[member_name]">
-                </div>
-                <div class="sign-block">
-                    <label for="phone">聯絡電話</label>
-                    <br>
-                    <input type="phone" id="phone" value="[member_phone]">
-                </div>
-                <div class="sign-block">
-                    <label for="add">聯絡地址</label>
-                    <br>
-                    <input type="text" id="address" value="[member_address]">
-                </div>
-				<div class="sign-block">
-                    <label for="taxid">統一編號（選填）</label>
-                    <br>
-                    <input type="text" id="taxid" value="[member_taxid]">
-                </div>
-                <div class="sign-block">
-                    <label for="skintype">您的膚質</label>
-                    <select id="skintype">
-                        <option selected disabled>請選擇...</option>
-                        <option value="A">乾性</option>
-                        <option value="B">中性</option>
-                        <option value="C">油性</option>
-                        <option value="D">混和性</option>
-                    </select>
-                </div>
-                <div class="sign-block">
-                    <label for="notice">備註（選填）</label>
-                    <br>
-                    <textarea id="notice" value="[member_notice]"></textarea>
-                </div>
-                <div class="sign-block">
-                    <a class="promise-btn" href="javascript:void(0)" onclick="memberEdit()">確定</a>
-                    <a class="neural-btn" href="index.php">取消</a>
+        <main>
+            <div class="sign-wrap">
+                <div class="sign text-center">
+                    <h2>會員資料修改</h2>
+                    <div class="sign-block">
+                        <p>電子信箱：[member_email]</p>
+                    </div>
+                    <div class="sign-block">
+                        <label for="name">您的姓名</label>
+                        <br>
+                        <input type="text" id="name" value="[member_name]">
+                    </div>
+                    <div class="sign-block">
+                        <label for="phone">聯絡電話</label>
+                        <br>
+                        <input type="phone" id="phone" value="[member_phone]">
+                    </div>
+                    <div class="sign-block">
+                        <label for="add">聯絡地址</label>
+                        <br>
+                        <input type="text" id="address" value="[member_address]">
+                    </div>
+    				<div class="sign-block">
+                        <label for="taxid">統一編號（選填）</label>
+                        <br>
+                        <input type="text" id="taxid" value="[member_taxid]">
+                    </div>
+                    <div class="sign-block">
+                        <label for="skintype">您的膚質</label>
+                        <select id="skintype">
+                            <option selected disabled>請選擇...</option>
+                            <option value="A">乾性</option>
+                            <option value="B">中性</option>
+                            <option value="C">油性</option>
+                            <option value="D">混和性</option>
+                        </select>
+                    </div>
+                    <div class="sign-block">
+                        <label for="notice">備註（選填）</label>
+                        <br>
+                        <textarea id="notice" value="[member_notice]"></textarea>
+                    </div>
+                    <div class="sign-block">
+                        <a class="promise-btn" href="javascript:void(0)" onclick="memberEdit()">確定</a>
+                        <a class="neural-btn" href="index.php">取消</a>
+                    </div>
                 </div>
             </div>
-        </div>
+        </main>
