--- a/view/user_function/member_signup.html
+++ b/view/user_function/member_signup.html
@@ -1,84 +1,86 @@
-        <div class="sign-wrap">
-            <div class="sign text-center">
-                <h2>註冊會員</h2>
-                <div class="sign-block">
-                    <label for="account">電子信箱</label>
-                    <br>
-                    <input type="email" id="account">
-                </div>
-                <div class="sign-block">
-                    <label for="name">您的姓名</label>
-                    <br>
-                    <input type="text" id="name">
-                </div>
-                <div class="sign-block">
-                    <label for="password1">密碼</label>
-                    <br>
-                    <input type="password" id="password1">
-                </div>
-                <div class="sign-block">
-                    <label for="password2">請再輸入密碼</label>
-                    <br>
-                    <input type="password" id="password2">
-                </div>
-                <div class="sign-block">
-                    <label for="birth">生日（例如 2000-01-31）</label>
-                    <br>
-                    <input type="date" id="birth">
-                </div>
-                <div class="sign-block">
-                    <label for="phone">聯絡電話</label>
-                    <br>
-                    <input type="phone" id="phone">
-                </div>
-                <div class="sign-block">
-                    <label for="address">聯絡地址</label>
-                    <br>
-                    <input type="text" id="address">
-                </div>
-                <div class="sign-block">
-                    <label for="taxid">統一編號（選填）</label>
-                    <br>
-                    <input type="text" id="taxid">
-                </div>
-                <div class="sign-block">
-                    <label for="skintype">您的膚質</label>
-                    <select id="skintype">
-                        <option selected disabled>請選擇...</option>
-                        <option value="A">乾性</option>
-                        <option value="B">中性</option>
-                        <option value="C">油性</option>
-                        <option value="D">混和性</option>
-                    </select>
-                </div>
-                <div class="sign-block">
-                    <label for="knowtype">如何認識三三</label>
-                    <select id="knowtype">
-                        <option selected disabled>請選擇...</option>
-                        <option value="A">粉絲專頁</option>
-                        <option value="B">親友介紹</option>
-                        <option value="C">媒體宣傳</option>
-                        <option value="D">實體攤位</option>
-                        <option value="E">其它</option>
-                    </select>
-                </div>
-                <div class="sign-block">
-                    <label for="notice">備註（選填）</label>
-                    <br>
-                    <textarea id="notice"></textarea>
-                </div>
-                <div class="sign-block">
-                    <p>點選確認表示您已詳閱並同意 個人資料保護條款</p>
-                    <textarea id="personal-info-protect-act" rows="10"></textarea>
-                </div>
-                <div class="sign-block">
-                    <a class="promise-btn" href="javascript:void(0)" onclick="memberSignup()">確認</a>
-                    <a class="neural-btn" href="index.php">取消</a>
-                </div>
-                <hr class="text-sep-sm">
-                <div class="sign-block">
-                    已有帳號？ <a class="promise-btn" href="index.php?route=member&in=signin">登入</a>
+        <main>
+            <div class="sign-wrap">
+                <div class="sign text-center">
+                    <h2>註冊會員</h2>
+                    <div class="sign-block">
+                        <label for="account">電子信箱</label>
+                        <br>
+                        <input type="email" id="account">
+                    </div>
+                    <div class="sign-block">
+                        <label for="name">您的姓名</label>
+                        <br>
+                        <input type="text" id="name">
+                    </div>
+                    <div class="sign-block">
+                        <label for="password1">密碼</label>
+                        <br>
+                        <input type="password" id="password1">
+                    </div>
+                    <div class="sign-block">
+                        <label for="password2">請再輸入密碼</label>
+                        <br>
+                        <input type="password" id="password2">
+                    </div>
+                    <div class="sign-block">
+                        <label for="birth">生日（例如 2000-01-31）</label>
+                        <br>
+                        <input type="date" id="birth">
+                    </div>
+                    <div class="sign-block">
+                        <label for="phone">聯絡電話</label>
+                        <br>
+                        <input type="phone" id="phone">
+                    </div>
+                    <div class="sign-block">
+                        <label for="address">聯絡地址</label>
+                        <br>
+                        <input type="text" id="address">
+                    </div>
+                    <div class="sign-block">
+                        <label for="taxid">統一編號（選填）</label>
+                        <br>
+                        <input type="text" id="taxid">
+                    </div>
+                    <div class="sign-block">
+                        <label for="skintype">您的膚質</label>
+                        <select id="skintype">
+                            <option selected disabled>請選擇...</option>
+                            <option value="A">乾性</option>
+                            <option value="B">中性</option>
+                            <option value="C">油性</option>
+                            <option value="D">混和性</option>
+                        </select>
+                    </div>
+                    <div class="sign-block">
+                        <label for="knowtype">如何認識三三</label>
+                        <select id="knowtype">
+                            <option selected disabled>請選擇...</option>
+                            <option value="A">粉絲專頁</option>
+                            <option value="B">親友介紹</option>
+                            <option value="C">媒體宣傳</option>
+                            <option value="D">實體攤位</option>
+                            <option value="E">其它</option>
+                        </select>
+                    </div>
+                    <div class="sign-block">
+                        <label for="notice">備註（選填）</label>
+                        <br>
+                        <textarea id="notice"></textarea>
+                    </div>
+                    <div class="sign-block">
+                        <p>點選確認表示您已詳閱並同意 個人資料保護條款</p>
+                        <textarea id="personal-info-protect-act" rows="10"></textarea>
+                    </div>
+                    <div class="sign-block">
+                        <a class="promise-btn" href="javascript:void(0)" onclick="memberSignup()">確認</a>
+                        <a class="neural-btn" href="index.php">取消</a>
+                    </div>
+                    <hr class="text-sep-sm">
+                    <div class="sign-block">
+                        已有帳號？ <a class="promise-btn" href="index.php?route=member&in=signin">登入</a>
+                    </div>
                 </div>
             </div>
-        </div>
+        </main>
         <script src="resource/dist/js/view/user_function/member_signup.js" defer></script>
