--- a/view/user_function/order_cus_view.html
+++ b/view/user_function/order_cus_view.html
@@ -1,33 +1,35 @@
-        <div class="sign-wrap">
-            <div class="sign text-center">
-                <h2>查看訂單</h2>
-                <div class="sign-block">
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>訂單編號</th>
-                                <th>發票編號</th>
-                                <th>缺貨狀態</th>
-                                <th>訂單狀態</th>
-                                <th>付款狀態</th>
-                                <th>付款方式</th>
-                                <th>訂單總額</th>
-                                <th>運費</th>
-                                <th>實收金額</th>
-                                <th>建立日期</th>
-                                <th>操作</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                        [cusOrderOperate]
-                        </tbody>
-                    </table>
-                </div>
-                <div class="sign-block">
-                    <p>目前全館滿777即可享臺灣本島免運費！</p>
-                    <a class="promise-btn" href="index.php?route=soap">前往單品</a>
-                    <a class="promise-btn" href="index.php?route=soapstring">旅用皂絲</a>
-                    <a class="neural-btn" href="index.php">返回首頁</a>
+        <main>
+            <div class="sign-wrap">
+                <div class="sign text-center">
+                    <h2>查看訂單</h2>
+                    <div class="sign-block">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>訂單編號</th>
+                                    <th>發票編號</th>
+                                    <th>缺貨狀態</th>
+                                    <th>訂單狀態</th>
+                                    <th>付款狀態</th>
+                                    <th>付款方式</th>
+                                    <th>訂單總額</th>
+                                    <th>運費</th>
+                                    <th>實收金額</th>
+                                    <th>建立日期</th>
+                                    <th>操作</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            [cusOrderOperate]
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="sign-block">
+                        <p>目前全館滿777即可享臺灣本島免運費！</p>
+                        <a class="promise-btn" href="index.php?route=soap">前往單品</a>
+                        <a class="promise-btn" href="index.php?route=soapstring">旅用皂絲</a>
+                        <a class="neural-btn" href="index.php">返回首頁</a>
+                    </div>
                 </div>
             </div>
-        </div>
+        </main>
