--- a/view/manage_ui/m_header.html
+++ b/view/manage_ui/m_header.html
@@ -10,3 +10,4 @@
         <meta property="og:url" content="https://www.trisoap.com.tw">
         <meta property="og:image" content="resource/img/index/index01.jpg">
         <link rel="shortcut icon" href="resource/img/misc/favicon.png">
+        <link rel="stylesheet" href="resource/font-awesome-4.7.0/css/font-awesome.min.css">
