--- a/resource/css/_general.scss
+++ b/resource/css/_general.scss
@@ -1,6 +1,8 @@
 // font for Trisoap signature
 @import url('https://fonts.googleapis.com/css?family=Great+Vibes');
 
+$media-breakpoint-laptop: 980px;
+$media-breakpoint-mobile: 979px;
 $wrap-lr-margin: 8%;
 $letter-spacing-18-18: 3.24px;
 
@@ -67,7 +69,7 @@ a.no-href {
 	letter-spacing: $letter-spacing-18-18;
 }
 
-// Buttons, usually <a> tag
+// Buttons, usually <a> or <button> tag
 @mixin btn($border-color, $background-color, $font-color, $border-color-hover: false, $background-color-hover: false, $font-color-hover: false) {
 	box-sizing: border-box;
 	border: solid 1px $border-color;
@@ -115,6 +117,7 @@ a.no-href {
 	padding: 8px 25px;
 }
 
+// input[type='text, email, phone, textarea, ...']
 .form-field {
 	box-sizing: border-box;
 	padding: 10px 24px;
@@ -140,6 +143,40 @@ a.no-href {
 	@include text-sep(#ccc);
 	margin: 30px auto;
 }
+
+// responsive table
+.rwd-table {
+	width: 100%;
+
+	td:first-child {
+		padding-top: 1em;
+	}
+
+	td:last-child {
+		padding-bottom: 1em;
+	}
+
+	td {
+		padding: 0.4em;
+	}
+
+	@media screen and (max-width: $media-breakpoint-mobile) {
+		thead {
+			display: none;
+		}
+
+		td {
+			display: block;
+		}
+
+		td:before {
+			content: attr(data-title);
+			display: inline-block;
+			width: 7em;
+		}
+	}
+}
+
 
 // JQuery UI Accordion
 .ui-accordion-header {
